start of portfolio page

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Caitlyn Caldwell: WDD 131 Portfolio</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+    <h1>Caitlyn Caldwell</h1>
     
 </body>
 </html>
