--- a/mission/index.html
+++ b/mission/index.html
@@ -8,7 +8,11 @@
     <meta name="author" content="Caitlyn Caldwell">
     <link href="styles/styles.css" rel="stylesheet" type="text/css">
 </head>
-<body>
+<body class="dark">
+    <select>
+        <option value="light">Light</option>
+        <option value="dark">Dark</option>
+    </select>
     <div id="content">
         <header>
             <h1>Mission Statement</h1>
@@ -29,5 +33,6 @@
             <img src="images/byui-logo_blue.webp" alt="BYUI Logo">
         </footer>
     </div>
+    <script src="scripts/mission.js"></script>
 </body>
 </html>
