--- a/mission/index.html
+++ b/mission/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Caitlyn Caldwell">
     <link href="styles/styles.css" rel="stylesheet" type="text/css">
 </head>
-<body class="dark">
+<body>
     <select>
         <option value="light">Light</option>
         <option value="dark">Dark</option>
