cool pic part 2 (adding javascript)

--- a/coolpics/index.html
+++ b/coolpics/index.html
@@ -12,43 +12,43 @@
     <header>
       <h1>Cool Pics 📷</h1>
       <nav>
-        <button type="button">Menu</button>
-        <a href="#">Home</a>
-        <a href="#">People</a>
-        <a href="#">Places</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
+        <button type="button" class="menu-button">Menu</button>
+        <a href="#" class="menu hide">Home</a>
+        <a href="#" class="menu hide">People</a>
+        <a href="#" class="menu hide">Places</a>
+        <a href="#" class="menu hide">About</a>
+        <a href="#" class="menu hide">Contact</a>
       </nav>
     </header>
     <main>
       <h2>Current Work</h2>
       <section class="gallery">
         <figure>
-          <img src="images/norris-sm.jpeg" alt="picture1" />
+          <img src="norris-sm.jpeg" alt="picture1" />
         </figure>
         <figure>
-          <img src="images/norris-sm.jpeg" alt="picture2" />
+          <img src="norris-sm.jpeg" alt="picture2" />
         </figure>
         <figure>
-          <img src="images/norris-sm.jpeg" alt="picture3" />
+          <img src="norris-sm.jpeg" alt="picture3" />
         </figure>
         <figure>
-          <img src="images/norris-sm.jpeg" alt="picture4" />
+          <img src="norris-sm.jpeg" alt="picture4" />
         </figure>
         <figure>
-          <img src="images/norris-sm.jpeg" alt="picture5" />
+          <img src="norris-sm.jpeg" alt="picture5" />
         </figure>
         <figure>
-          <img src="images/norris-sm.jpeg" alt="picture6" />
+          <img src="norris-sm.jpeg" alt="picture6" />
         </figure>
         <figure>
-          <img src="images/norris-sm.jpeg" alt="picture7" />
+          <img src="norris-sm.jpeg" alt="picture7" />
         </figure>
         <figure>
-          <img src="images/norris-sm.jpeg" alt="picture8" />
+          <img src="norris-sm.jpeg" alt="picture8" />
         </figure>
         <figure>
-          <img src="images/norris-sm.jpeg" alt="picture9" />
+          <img src="norris-sm.jpeg" alt="picture9" />
         </figure>
       </section>
     </main>
