Registration Form - HTML, CSS, and Javascript

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Caitlyn Caldwell</h1>
     <a href="coolpics/index.html">Coolpics</a>
+    <a href="register/index.html">Register</a>
     
 </body>
 </html>
