recipe html, css, and javascript

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Caitlyn Caldwell</h1>
     <a href="coolpics/index.html">Coolpics</a>
     <a href="register/index.html">Register</a>
+    <a href="recipes/index.html">Recipes</a>
     
 </body>
 </html>
