--- a/template.html
+++ b/template.html
@@ -6,6 +6,7 @@
     <title></title>
     <meta name="description" content="">
     <meta name="author" content="Caitlyn Caldwell">
+    <link rel="icon" type="image/x-icon" href="images/favicon.png"/>
     <link rel="stylesheet" href="styles/.css">
 </head>
 <body>
