overlay + pop goes the weasel

--- a/personal-site/bw.html
+++ b/personal-site/bw.html
@@ -30,9 +30,13 @@
                 <div class="really-awesome-container"></div>
                 <div class="really-awesome-container"></div>
             </div>
-
+            <div class="modal">
+                <img src="" alt="" class="modal-content">
+            </div>
         </main>
         <script src="./scripts/ball-pit1.js"></script>
+        <script src="./scripts/weasel.js"></script>
+
         <footer>
             <p>Out of Focus &copy; 2024 - Caitlyn Caldwell</p>
             <p><a href="site-plan.html">Site Plan</a></p>
