color pop goes the weasel

--- a/personal-site/color.html
+++ b/personal-site/color.html
@@ -30,7 +30,9 @@
                 <div class="homunculus"></div>
                 <div class="homunculus"></div>
             </div>
-
+            <div class="modal">
+                <img src="" alt="" class="modal-content">
+            </div>
         </main>
         <script src="./scripts/ball-pit2.js"></script>
         <footer>
