no longer kansas dlc

--- a/personal-site/color.html
+++ b/personal-site/color.html
@@ -32,6 +32,7 @@
             </div>
             <div class="modal">
                 <img src="" alt="" class="modal-content">
+                <p class="data"></p>
             </div>
         </main>
         <script src="./scripts/ball-pit2.js"></script>
